--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^5.6.0",
     "@capacitor/cli": "^5.6.0",
     "@capacitor/core": "^5.6.0",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.4.0",
+    "@capacitor/ios": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
